--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -48,6 +48,9 @@ html
                                 ul.dropdown-menu
                                     li
                                         a(href="/admin/password") Change password
+                                    li.divider
+                                    li
+                                        a(href="/") Visit demo website
                                     li
                                         a(href="/admin/signout") Sign out
             .container
