Change link to page of adding new admin to button

--- a/app/views/user/index.jade
+++ b/app/views/user/index.jade
@@ -6,9 +6,7 @@ block content
             a(href="/admin/user") Administrators
 
             span.pull-right
-                a.btn.btn-link(href="/admin/user/add")
-                    i.fa.fa-plus
-                    | &nbsp;Add new administrator
+                a.btn.btn-default(href="/admin/user/add") Add new administrator
 
     if total == 0
         p.text-center There is no administrator
