--- a/app/views/auth/signin.jade
+++ b/app/views/auth/signin.jade
@@ -17,7 +17,10 @@ block content
                         input.form-control(type="text", name="user_name", placeholder="Username")
                     div.form-group
                         input.form-control(type="password", name="password", placeholder="Password")
-                    button.btn.btn-success(type="submit") Sign in
+                    div.form-group
+                        button.btn.btn-primary(type="submit") Sign in
+                        span.form-control-static(style="margin: 0 10px;") &mdash; or &mdash;
+                        a.btn.btn-default(href="/") Visit demo website
 
 block footerScript
     script(type="text/javascript", src="/vendor/bootstrapvalidator/js/bootstrapValidator.min.js")
