--- a/app/views/dashboard/index.jade
+++ b/app/views/dashboard/index.jade
@@ -15,7 +15,7 @@ block content
                     thead
                         tr
                             th File
-                            th Template
+                            th Package
                             th # Downloads
                             th By
                     tbody#recentDownloads
@@ -24,7 +24,7 @@ block content
                                 div {{file.name}}
                                 small {{file.size}}
                             td
-                                a(href="#{demoUrl}#{{template.slug}}") {{template.name}}
+                                a(href="#{demoUrl}#{{package.slug}}") {{package.name}}
                             td {{file.num_downloads}}
                             td
                                 div {{user_name}}
@@ -175,8 +175,8 @@ block footerScript
                                 .replace('{{file.name}}', download.file.name.length > 30 ? download.file.name.substr(0, 30) + '...' : download.file.name)
                                 .replace('{{file.size}}', filesize(download.file.size))
                                 .replace('{{file.num_downloads}}', download.file.num_downloads)
-                                .replace('{{template.slug}}', download.template.slug)
-                                .replace('{{template.name}}', download.template.name)
+                                .replace('{{package.slug}}', download.package.slug)
+                                .replace('{{package.name}}', download.package.name)
                                 .replace('{{user_name}}', download.user_name)
                                 .replace('{{downloaded_date}}', moment(download.downloaded_date).fromNow())
                         ).appendTo('#recentDownloads');
