--- a/app/views/layouts/account.jade
+++ b/app/views/layouts/account.jade
@@ -33,7 +33,7 @@ html
                     div#navbar-collapse.collapse.navbar-collapse
                         ul.nav.navbar-nav
                             li
-                                a(href="/account/template") Templates
+                                a(href="/account/package") Packages
 
                         ul.nav.navbar-nav.navbar-right
                             li.dropdown
