--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -33,7 +33,7 @@ html
                     div#navbar-collapse.collapse.navbar-collapse
                         ul.nav.navbar-nav
                             li
-                                a(href="/admin/template") Templates
+                                a(href="/admin/package") Packages
                             if ('root' == sessionUser.role)
                                 li
                                     a(href="/admin/membership") Memberships
