--- a/app/views/package/add.jade
+++ b/app/views/package/add.jade
@@ -28,6 +28,13 @@ block content
         div.tab-content
             div#general.tab-pane.active
                 div.form-group
+                    label.control-label.col-lg-2 Type
+                    div.col-lg-3
+                        select.form-control(name="type")
+                            option(value="template") Template
+                            option(value="extension") Extension
+
+                div.form-group
                     label.control-label.col-lg-2 Name
                     div.col-lg-6
                         input.form-control(type="text", name="name")
