--- a/app/views/package/edit.jade
+++ b/app/views/package/edit.jade
@@ -148,7 +148,7 @@ block content
 
             div#changelog.tab-pane
                 p Use the Markdown format for chanelog
-                ul.nav.nav-tabs
+                ul.nav.nav-pills
                     li.active
                         a(href="#changelogContentTab", data-toggle="tab") Changelog
                     li
