--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -34,6 +34,8 @@ html
                         ul.nav.navbar-nav
                             li
                                 a(href="/admin/package") Packages
+                            li
+                                a(href="/admin/file") Files
                             if ('root' == sessionUser.role)
                                 li
                                     a(href="/admin/membership") Memberships
